--- a/core/src/main/res/xml/preferences_app.xml
+++ b/core/src/main/res/xml/preferences_app.xml
@@ -62,6 +62,13 @@
             android:title="@string/preferences_autojoin_prefer_high_rating_games" />
 
         <net.mabako.sgtools.EditTextIntegerPreference
+            android:defaultValue="75"
+            android:numeric="integer"
+            android:key="preferences_autojoin_minimum_rating"
+            android:title="@string/preferences_autojoin_minimum_rating"
+            android:summary="minimum rating to autojoin" />
+
+        <net.mabako.sgtools.EditTextIntegerPreference
             android:defaultValue="15"
             android:numeric="integer"
             android:key="preferences_autojoin_bad_ratio"
