added option to hide games with a low rating

--- a/core/src/main/res/xml/preferences_app.xml
+++ b/core/src/main/res/xml/preferences_app.xml
@@ -27,8 +27,8 @@
         <CheckBoxPreference
             android:defaultValue="false"
             android:key="preferences_hide_low_rating_games"
-            android:summary="hides games with a rating below the minimum rating to autojoin"
-            android:title="@string/preferences_hide_low_rating_games" />
+            android:title="@string/preferences_hide_low_rating_games"
+            android:summary="hides games with a rating below the minimum rating to autojoin"/>
     </PreferenceCategory>
 
     <PreferenceCategory android:title="@string/preferences_autojoin">
