changed autojoin logic

--- a/core/src/main/res/values/attrs.xml
+++ b/core/src/main/res/values/attrs.xml
@@ -7,4 +7,7 @@
     <attr name="colorLightSeparatorBackground" format="color" />
     <attr name="colorLighterSeparatorBackground" format="color" />
     <attr name="lightTextColor" format="color" />
+
+    <attr name="colorBookmarked" format="color" />
+    <attr name="colorBlackListed" format="color" />
 </resources>
