added whitelist and blacklist tag configuration

--- a/core/src/main/res/xml/preferences_app.xml
+++ b/core/src/main/res/xml/preferences_app.xml
@@ -68,6 +68,13 @@
             android:title="@string/preferences_autojoin_minimum_points_to_keep_for_tagged"
             android:summary="these points will be kept even when there are giveaways with a great ratio are available"/>
 
+        <net.mabako.sgtools.EditTextIntegerPreference
+            android:defaultValue="30"
+            android:numeric="integer"
+            android:key="preferences_autojoin_games_with_points"
+            android:title="@string/preferences_autojoin_games_with_points"
+            android:summary="autojoin games with equal or more points than this" />
+
     </PreferenceCategory>
 
     <PreferenceCategory android:title="@string/preferences_discussions">
