--- a/core/src/main/res/values/attrs.xml
+++ b/core/src/main/res/values/attrs.xml
@@ -10,4 +10,5 @@
 
     <attr name="colorBookmarked" format="color" />
     <attr name="colorBlackListed" format="color" />
+    <attr name="colorPoint" format="color" />
 </resources>
