--- a/core/src/main/res/values/styles.xml
+++ b/core/src/main/res/values/styles.xml
@@ -15,6 +15,7 @@
         <item name="lightTextColor">#9a9a9a</item>
         <item name="colorBookmarked">#aaffaa</item>
         <item name="colorBlackListed">#ffaaaa</item>
+        <item name="colorPoint">#aaaaff</item>
     </style>
 
     <style name="AppTheme.Dark" parent="MaterialDrawerTheme">
