added percentage points to keep calculation

--- a/core/src/main/res/values/attrs.xml
+++ b/core/src/main/res/values/attrs.xml
@@ -11,4 +11,5 @@
     <attr name="colorBookmarked" format="color" />
     <attr name="colorBlackListed" format="color" />
     <attr name="colorPoint" format="color" />
+    <attr name="colorNotLevel" format="color" />
 </resources>
