--- a/core/src/main/res/xml/preferences_app.xml
+++ b/core/src/main/res/xml/preferences_app.xml
@@ -76,6 +76,15 @@
             android:summary="these points will be kept when the level does not match" />
 
         <net.mabako.sgtools.EditTextIntegerPreference
+            android:defaultValue="50"
+            android:numeric="integer"
+            android:key="preferences_autojoin_minimum_points_to_keep_for_not_must_have_games"
+            android:title="@string/preferences_autojoin_minimum_points_to_keep_for_not_must_have_games"
+            android:summary="these points will be kept when the game is a not Must-Have Game" />
+
+
+
+        <net.mabako.sgtools.EditTextIntegerPreference
             android:defaultValue="30"
             android:numeric="integer"
             android:key="preferences_autojoin_games_with_points"
