--- a/core/src/main/res/xml/preferences_app.xml
+++ b/core/src/main/res/xml/preferences_app.xml
@@ -55,34 +55,25 @@
             android:summary="minimum rating to autojoin" />
 
         <net.mabako.sgtools.EditTextIntegerPreference
-            android:defaultValue="150"
+            android:defaultValue="0"
             android:numeric="integer"
-            android:key="preferences_autojoin_minimum_points_to_keep_for_untagged"
-            android:title="@string/preferences_autojoin_minimum_points_to_keep_for_untagged"
-            android:summary="these points will be kept when there are only giveaways with bad ratio left"/>
-
-        <net.mabako.sgtools.EditTextIntegerPreference
-            android:defaultValue="50"
-            android:numeric="integer"
-            android:key="preferences_autojoin_minimum_points_to_keep_for_tagged"
-            android:title="@string/preferences_autojoin_minimum_points_to_keep_for_tagged"
-            android:summary="these points will be kept even when there are giveaways with a great ratio are available"/>
-
-        <net.mabako.sgtools.EditTextIntegerPreference
-            android:defaultValue="50"
-            android:numeric="integer"
-            android:key="preferences_autojoin_minimum_points_to_keep_for_not_meeting_level"
-            android:title="@string/preferences_autojoin_minimum_points_to_keep_for_not_meeting_level"
-            android:summary="these points will be kept when the level does not match" />
+            android:key="preferences_autojoin_minimum_level_for_whitelist"
+            android:title="whitelist - min level"
+            android:summary="min level  rating to autojoin" />
 
         <net.mabako.sgtools.EditTextIntegerPreference
             android:defaultValue="50"
             android:numeric="integer"
             android:key="preferences_autojoin_minimum_points_to_keep_for_not_must_have_games"
-            android:title="@string/preferences_autojoin_minimum_points_to_keep_for_not_must_have_games"
+            android:title="points to keep for must have games"
             android:summary="these points will be kept when the game is a not Must-Have Game" />
 
-
+        <net.mabako.sgtools.EditTextIntegerPreference
+            android:defaultValue="250"
+            android:numeric="integer"
+            android:key="preferences_autojoin_minimum_points_to_keep_for_not_meeting_level"
+            android:title="points to keep when nothing matches"
+            android:summary="these points will be kept when the level does not match" />
 
         <net.mabako.sgtools.EditTextIntegerPreference
             android:defaultValue="3000"
