--- a/core/src/main/res/values/styles.xml
+++ b/core/src/main/res/values/styles.xml
@@ -14,7 +14,7 @@
         <item name="colorHighlightBackground">@color/md_blue_100</item>
         <item name="lightTextColor">#9a9a9a</item>
         <item name="colorMustHave">#11FF05</item>
-        <item name="colorWhitelisted">#aaffaa</item>
+        <item name="colorWhitelisted">#88ff88</item>
         <item name="colorWhitelistedNotLevel">#ccffcc</item>
         <item name="colorBlackListed">#ffaaaa</item>
         <item name="colorPoint">#aaaaff</item>
