added ignore list and option to hide ignored or blacklisted games

--- a/core/src/main/res/layout/fragment_filter.xml
+++ b/core/src/main/res/layout/fragment_filter.xml
@@ -186,6 +186,26 @@
         app:layout_gravity="center_vertical"
         app:layout_rowWeight="1" />
 
+    <CheckBox
+        android:id="@+id/filter_ignored"
+        style="@style/NormalText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/filter_ignored_checkbox"
+        app:layout_columnSpan="3"
+        app:layout_gravity="center_vertical"
+        app:layout_rowWeight="1" />
+
+    <CheckBox
+        android:id="@+id/filter_blacklisted"
+        style="@style/NormalText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/filter_blacklisted_checkbox"
+        app:layout_columnSpan="3"
+        app:layout_gravity="center_vertical"
+        app:layout_rowWeight="1" />
+
     <!-- region restricted only -->
     <CheckBox
         android:id="@+id/filter_region_restricted"
