--- a/core/src/main/res/values/attrs.xml
+++ b/core/src/main/res/values/attrs.xml
@@ -12,6 +12,7 @@
     <attr name="colorWhitelisted" format="color" />
     <attr name="colorWhitelistedNotLevel" format="color" />
     <attr name="colorBlackListed" format="color" />
+    <attr name="colorIgnore" format="color" />
     <attr name="colorPoint" format="color" />
     <attr name="colorNotLevel" format="color" />
 </resources>
