--- a/core/src/main/res/layout/fragment_filter.xml
+++ b/core/src/main/res/layout/fragment_filter.xml
@@ -216,4 +216,15 @@
         app:layout_columnSpan="3"
         app:layout_gravity="center_vertical"
         app:layout_rowWeight="1" />
+
+    <CheckBox
+        android:id="@+id/filter_group_restricted"
+        style="@style/NormalText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Only group restricted Giveaways"
+        app:layout_columnSpan="3"
+        app:layout_gravity="center_vertical"
+        app:layout_rowWeight="1" />
+
 </android.support.v7.widget.GridLayout>
